src/test/deca/context/invalid/modulo_float_modulo_int.deca
// Description :
//
//      Test contextuellement incorrect de la modulo d'un float et d'un int dans une variable float
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    float y=  3.5 % 5;
}